Make login info response consistent between endpoints
